<resources>
    <string name="app_name">Frindl</string>
    <string name="email_address">Email address</string>
    <string name="name">Display name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign-up</string>
    <string name="sign_up">Sign up</string>
    <string name="login_to_account">Login to account</string>
    <string name="register_account">Register account</string>
    <string name="explore">Explore</string>
    <string name="my_stuff">My Stuff</string>
    <string name="public_libraries">Public Libraries</string>
    <string name="search">Search</string>
    <string name="make_library">Make a Library</string>
    <string name="let_there_be_library">Let there be Library</string>
    <string name="let_there_be">Let there be</string>
    <string name="password_optional">Password (optional)</string>
    <string name="lib_name">Name</string>
    <string name="let_the_library_be_public">Let the library be public</string>
    <string name="manage_your_libraries">Manage your libraries</string>
    <string name="create">Create</string>
    <string name="let_there_be_knowledge">Let there be knowledge</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="let_the_book_be_public">Let the book be public</string>
    <string name="category">Category</string>
    <string name="upload_file">Upload file</string>
    <string name="select_file">Select file</string>
    <string name="library">Library</string>
    <string name="libraries">Libraries</string>
    <string name="access_library">Access Library</string>
    <string name="access">Access</string>
</resources>