<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGrey"
    tools:context=".AddBookToLibraryActivity">


    <TextView
        android:id="@+id/lblTitle8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/let_there_be_knowledge"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivBookSubTitle2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle8"
        app:srcCompat="@drawable/ic_book" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBookSubTitle2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblLibBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                android:text="" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/title"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteLight"
                app:counterMaxLength="48"
                app:boxStrokeColor="@color/boxStroke"
                app:hintTextColor="@color/whiteLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLibBookTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_folder"
                    android:drawablePadding="6dp"
                    android:inputType="text"
                    android:maxLength="48"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:hint="@string/description"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteLight"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/boxStroke"
                app:hintTextColor="@color/whiteLight"
                app:counterTextColor="@color/whiteLight"
                app:counterMaxLength="120"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLibBookDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="120"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="6dp"
                    android:inputType="textMultiLine"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/category"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteLight"
                app:boxStrokeColor="@color/boxStroke"
                app:hintTextColor="@color/whiteLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLibBookCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_category"
                    android:drawablePadding="6dp"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:focusable="false"
                    android:longClickable="false"
                    android:cursorVisible="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:hint="@string/select_file"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteLight"
                app:boxStrokeColor="@color/boxStroke"
                app:hintTextColor="@color/whiteLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLibBookUpload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_upload"
                    android:drawablePadding="6dp"
                    android:inputType="textMultiLine"
                    android:textColor="@color/white"
                    android:focusable="false"
                    android:longClickable="false"
                    android:cursorVisible="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbLibMakeBookPublic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end"
                android:text="@string/let_the_book_be_public"
                android:textColor="@color/white"
                android:buttonTint="@color/fuchsia"
                />


            <Button
                android:id="@+id/btnLibAddBook"
                style="@style/MButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_bg_round"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>


<!--    <ProgressBar-->
<!--        android:id="@+id/pbLibAddBook"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>